--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,29 @@
 # api
 PORT=8080
+MAILER_BASE_URL=http://<docker_service_name>:8082
+
+# nodeMailer
+MAILER_PORT=8082
+EMAIL_USERNAME=
+EMAIL_PASSWORD= # if pass is failling follow step by step tutorial to generate password https://stackoverflow.com/a/45479968/16227292
 
 # MongoDB
 MONGODB_USER=
 MONGODB_PASSWORD=
 
 # MongoDB Express
+# no need in production
 ME_USER=
 ME_PASSWORD=
+
+# JWT
+JWT_SECRET=
+JWT_EXPIRATION_TIME=86400000 # 1d
+
+# JWT Refresh Token
+JWT_REFRESH_SECRET=
+JWT_REFRESH_EXPIRATION_TIME=7200000 # 2h
+
+# JWT Reset Password Token
+JWT_SECRET_RESET_PASSWORD=
+JWT_EXPIRATION_TIME_RESET_PASSWORD=7200000 # 2h
