--- a/mailer/package.json
+++ b/mailer/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "api",
+  "name": "nodemailer",
   "version": "1.0.0",
   "description": "",
-  "main": "./src/server.js",
+  "main": "index.js",
   "scripts": {
     "dev": "nodemon",
     "build": "tsc --b --clean && tsc",
     "docker:test": "docker exec -it http npm run test:watch",
-    "test": "vitest run",
-    "test:watch": "vitest -w",
     "lint:check": "eslint './src/**/*'",
     "prettier:fix": "prettier --write './src/**/*'",
     "prettier:check": "prettier --check './src/**/*' --debug-check"
@@ -17,25 +15,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.6.0",
-    "bcrypt": "^5.1.1",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^7.6.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.7"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.1",
-    "@types/cookie-parser": "^1.4.5",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
-    "@types/jsonwebtoken": "^9.0.4",
     "@types/morgan": "^1.9.7",
     "@types/node": "^20.8.9",
+    "@types/nodemailer": "^6.4.13",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "@typescript-eslint/parser": "^6.9.0",
     "eslint": "^8.52.0",
