Ethereal email test account

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,11 @@ MAILER_BASE_URL=http://<docker_service_name>:8082
 
 # nodeMailer
 MAILER_PORT=8082
+MAILER_NODE_ENV= # development || production
+# Ethereal test account: https://ethereal.email/create
+# generate gmail password: https://stackoverflow.com/a/45479968/16227292
 EMAIL_USERNAME=
-EMAIL_PASSWORD= # if pass is failling follow step by step tutorial to generate password https://stackoverflow.com/a/45479968/16227292
+EMAIL_PASSWORD=
 
 # MongoDB
 MONGODB_USER=
